# gbc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: allowlists.py  classifier.py  cost_ingest.py  cost_qa.py  cost_query.py  cost_recompute.py  db.py  events.py  executor.py  families.py  files.py  formatting.py  fts.py  inspector.py  llm.py  main.py  models.py  pricing.py  reasoner.py  scanner.py  session_index.py  session_reader.py  sessions_query.py  taxonomy.py
app/templates/: _costs_body.html  _costs_qa_answer.html  _file_view.html  _review_body.html  base.html  costs.html  entry.html  families.html  home.html  review.html  session_detail.html  sessions.html
docs/superpowers/plans/: 2026-04-23-p1-workspace-audit.md  2026-04-24-p2-session-index.md  (+1 more)
static/: style.css
tests/: conftest.py  test_allowlists.py  test_classifier.py  test_cost_ingest.py  test_cost_qa.py  test_cost_query.py  test_cost_recompute.py  test_costs_routes.py  test_db.py  test_events.py  test_executor.py  test_families.py  test_families_routes.py  test_files.py  test_formatting.py  test_fts.py  test_inspector.py  test_integration.py  test_llm.py  test_models.py  test_p2_integration.py  test_pricing.py  test_reasoner.py  test_routes.py  test_scanner.py  test_session_index.py  test_session_reader.py  test_sessions_query.py  test_sessions_routes.py  test_taxonomy.py  test_wire_nav.py
watcher/: index.js  package-lock.json  package.json  parser.js  poster.js  state.js
watcher/test/: parser.test.js  poster.test.js  state.test.js
(+3 files in other folders)
